src/gui/image/qimage_p.h
@@ -16,8 +16,6 @@ DECL|member|has_alpha_clut
 DECL|member|height
 DECL|member|is_cached
 DECL|member|is_locked
-DECL|member|ldpmx
-DECL|member|ldpmy
 DECL|member|nbytes
 DECL|member|offset
 DECL|member|own_data
